src/assets/css/limit-order.scss
/* ... */
// Checkmark checkbox
%checkmark-checkbox {
    position: absolute;
    top: 50%;
    left: 0;
    width: 12px;
    height: 12px;
    border: solid 1px #d1d8dd;
    border-radius: 2px;
    // border: solid 4px #ff9008;
    background-color: #ffffff;
    transform: translateY(-50%);
    transition: all .3s;

    &::after {
        content: '';
        display: block;
        border-width: 0 1px 1px 0;
        border-style: solid;
        border-color: #ffffff;
        position: absolute;
        top: 50%;
        left: 50%;
        opacity: 0;
        width: 4px;
        height: 7px;
        transform: translateX(-50%) translateY(-65%) rotate(45deg);
        // transition: all .5s;
    }
}

%checkmark-checkbox--checked {
    border: solid 1px #ff9008;
    background-color: #ff9008;

    &::after {
        opacity: 1;
    }
}
// -------------------------

.limit-order-container {
    background-color: #eff4fa;
    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 1px 10px 0 rgba(0, 0, 0, 0.12);

    .select-token.error .__react_component_tooltip{
        top: 50px !important;
    }
}

.limit-order-body {
    padding-bottom: 60px;

    &--form {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-gap: 16px;
        padding: 0 1rem;

        @include screen-max-width(medium) {
            grid-template-columns: auto;
            grid-template-rows: auto auto;
            padding: 0;
        }
    }

    &--list {
        display: flex;
    }
}

.limit-order-account {
    padding-top: 25px;
    padding-bottom: 25px;

    &__title {
        display: flex;
        justify-content: space-between;
        font-size: 14px;
        font-weight: 600;
        color: #222222;
        margin: 0 25px 10px;

        @include screen-max-width(medium) {
            border-top: 1px solid #e1e4eb;
            padding-top: 15px;
        }
    }

    .import-account {
        &__title {
            font-size: 14px;
            color: #5A5E67;
            font-weight: 600;
            margin: 0 0 25px 12px;
            text-align: start;
        }

        &__item {
            width: 135px;
        }

        &__name {
            font-size: 10px;
            color: #677c94;
        }
    }

    // Override
    .top-token {
        width: 100%;
        padding: 0;
        padding: 0 25px;
        display: flex;
        flex-wrap: wrap;

        @include screen-max-width(medium) {
            justify-content: flex-end;

            &-content {
                width: 100%;
            }
        }
        
        &-item {
            cursor: pointer;
            font-size: 12px;
            font-weight: 500;
            color: #666666;
    
            &.active {
                color: #222222;
                opacity: 1;
                font-weight: 600;
            }
    
            &__symbol {
                text-decoration: none;
            }
        }

        &-more {
            font-size: 11px;
            font-weight: 500;
            color: #666666;
            text-decoration: underline;
            background-color: transparent;

            &:hover {
                background-color: transparent;
            }

            &:after {
                background-image: none;
                content: "";
            }
        }
    }

    &__advance {
        width: calc(100% - 25px);
        height: 252px;
        padding: 10px 20px;
        margin: 15px 0 0 25px;
        border-radius: 6px;
        box-shadow: 0 4px 12px 0 rgba(87, 102, 119, 0.14);
        background-color: #ffffff;
        position: relative;

        @include screen-max-width(medium) {
            width: 100%;
            margin: 15px 0 0 0;
            height: 280px;
        }

        @include animation(slideInDown) {
            animation-duration: 0.3s;
            animation-timing-function: ease-out;
          };

        .advance-close {
            position: absolute;
            right: 5px;
            top: 5px;
            z-index: 2;
            padding: 10px;
            cursor: pointer;
            @include screen-max-width(large) {
                right: 0px;
                top: -5px;
            }
            &_wrapper {
                background-image: url("../img/v3/Close-3.svg");
                width: 16px;
                height: 16px;
            }

            @include screen-max-width(medium) {
                top: 5px;
            }
        }

        // Override
        .account-balance {
            &__address-text {
                font-size: 16px;
                font-weight: 600;
                color: #ef8102;
            }

            &__wallet-name {
                font-size: 12px;
                font-weight: 500;
                color: #141927;
            }

            &__address-link {
                font-size: 12px;
                font-weight: 500;
            }

            &__content-search-container {
                &::before {
                    width: 16px;
                    height: 16px;
                }
            }

            & &__content-search {
                &::placeholder {
                    color: #b8babe;
                    font-weight: 500;
                }
            }

            &__sort-dropdown {
                font-weight: 500;
                color: #5a5e67;
            }

            &__token-item {
                font-size: 12px;
                font-weight: 500;
                color: #5a5e67;
            }
        }
    }

    .reimport-msg {
        font-size: 12px;
        font-weight: 500;
        color: #8690ad;
        text-decoration: underline;
        cursor: pointer;
    }
}

.limit-order-fee {
    margin: 0 25px;
    border-top: 1px solid #e1e4eb;
    padding-top: 15px;
    font-size: 12px;
    color: #666666;
    font-weight: 500;

    &__text {
        font-weight: 600;
        color: #666666;
        margin-bottom: 9px;
    }

    a {
        text-decoration: underline;
    }
}
/* ... */

